--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "express": "4.17.1",
     "express-graphql": "0.12.0",
     "graphql": "15.4.0",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-query": "2.26.4",
     "uuid": "8.3.1"
+  },
+  "devDependencies": {
+    "esbuild": "0.8.21"
   }
 }
