--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "esbuild ./src/index.jsx --bundle --sourcemap --define:process.env.NODE_ENV=\\\"development\\\" --outfile=./public/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -15,6 +16,13 @@
     "uuid": "8.3.1"
   },
   "devDependencies": {
-    "esbuild": "0.8.21"
+    "@landau/eslint-config": "4.0.3",
+    "esbuild": "0.8.21",
+    "eslint": "7.15.0",
+    "eslint-config-prettier": "7.0.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-prettier": "3.2.0",
+    "eslint-plugin-react": "7.21.5",
+    "prettier": "2.2.1"
   }
 }
