--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "build": "esbuild ./src/index.jsx --bundle --sourcemap --define:process.env.NODE_ENV=\\\"development\\\" --outfile=./public/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "4.17.1",
